--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,6 +22,10 @@
 </head>
 
 <body>
+<section style="background-color: #f8f9fa; padding: 40px; text-align: center;">
+<h1 style="font-size: 3rem; color: #333; ">Welcome to MarketPeak</h1>
+<p style="font-size: 1.2rem; color: #555; ">your one-stop shop for the best online deals</p>
+</section>
 
   <!-- Start navBar -->
   <nav class="navbar navbar-expand-lg" id="nav">
