added wecome message

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <h1 style="font-size: 3rem; color: #333; ">Welcome to MarketPeak</h1>
 <p style="font-size: 1.2rem; color: #555; ">your one-stop shop for the best online deals</p>
 </section>
+<h2>Welcome To MarketPeak!</h2>
+<p>Discover top deals on tech gadgets, fashion, and more.</p>
 
   <!-- Start navBar -->
   <nav class="navbar navbar-expand-lg" id="nav">
